--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
     <h2>News</h2><br>
     <font size="3px">
 
+    <b>27 Nov 2023</b><br>
+    <span class="easylink">
+    One paper on sampled softmax loss for recommendaiton is accepted by <a href="https://dl.acm.org/journal/tois", target="_blank">https://dl.acm.org/journal/tois</a>. 
+    </span><br><br>
+
     <b>20 Oct 2023</b><br>
     <span class="easylink">
     One paper is accepted by <a href="https://www.wsdm-conference.org/2024/", target="_blank">WSDM</a> on efficient recommendation. 
@@ -164,6 +169,19 @@ Multi-modal Data Analysis" </font> </br>
 </table>
 
 <b> In the Year of 2023: </b> </br></br>
+
+ACM Transactions on Information Systems (TOIS 2022) 
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="./papers/tois-ssm.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">On the Effectiveness of Sampled Softmax Loss for Item Recommendation</span> 
+      <br><b>Jiancan Wu</b>, Xiang Wang, Xingyu Gao, Jiawei Chen, Hongcheng Fu, Tianyu Qiu, and Xiangnan He.
+    <br>ACM Transactions on Information Systems (TOIS 2023) &nbsp;&nbsp;
+  </td> 
+  </tr>
+ </tbody>
+</table>
 
 <table>
   <tbody>
