--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <b>27 Nov 2023</b><br>
     <span class="easylink">
-    One paper on sampled softmax loss for recommendaiton is accepted by <a href="https://dl.acm.org/journal/tois", target="_blank">https://dl.acm.org/journal/tois</a>. 
+    One paper on sampled softmax loss for recommendaiton is accepted by <a href="https://dl.acm.org/journal/tois", target="_blank">ACM TOIS</a>. 
     </span><br><br>
 
     <b>20 Oct 2023</b><br>
@@ -170,7 +170,6 @@ Multi-modal Data Analysis" </font> </br>
 
 <b> In the Year of 2023: </b> </br></br>
 
-ACM Transactions on Information Systems (TOIS 2022) 
 <table>
   <tbody>
   <tr>
