--- a/index.html
+++ b/index.html
@@ -30,10 +30,15 @@
 <div id="news">
     <h2>News</h2><br>
     <font size="3px">
+    
+    <b>1 Dec 2023</b><br>
+    <span class="easylink">
+    Two papers are accepted by <a href="https://icde2024.github.io/", target="_blank">ICDE 2024</a> on graph contrastive learinng and softmax loss for recommendation. 
+    </span><br><br>
 
     <b>27 Nov 2023</b><br>
     <span class="easylink">
-    One paper on sampled softmax loss for recommendaiton is accepted by <a href="https://dl.acm.org/journal/tois", target="_blank">ACM TOIS</a>. 
+    One paper on sampled softmax loss for recommendation is accepted by <a href="https://dl.acm.org/journal/tois", target="_blank">ACM TOIS</a>. 
     </span><br><br>
 
     <b>20 Oct 2023</b><br>
