--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
     <h2>News</h2><br>
     <font size="3px">
     
+    <b>26 March 2024</b><br>
+    <span class="easylink">
+    Three papers are accepted by <a href="https://sigir-2024.github.io/", target="_blank">SIGIR 2024</a> on LLM-based recommendation and medication recommendation. 
+    </span><br><br>
+
     <b>1 Dec 2023</b><br>
     <span class="easylink">
     Two papers are accepted by <a href="https://icde2024.github.io/", target="_blank">ICDE 2024</a> on graph contrastive learinng and softmax loss for recommendation. 
@@ -164,10 +169,34 @@ Multi-modal Data Analysis" </font> </br>
 <table>
   <tbody>
   <tr>
-    <td class="left"><a href="tocome.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td class="left"><a href="./papers/icde24-bsl.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">BSL: Understanding and Improving Softmax Loss for Recommendation</span> 
+      <br>Junkang Wu, Jiawei Chen, <b>Jiancan Wu*</b>, Wentao Shi, Jizhi Zhang, Xiang Wang
+    <br>ICDE 2024 (Full) &nbsp;&nbsp; <a href="https://github.com/junkangwu/BSL" target="_blank">Codes</a> &nbsp;&nbsp; (*Corresponding)
+  </td> 
+  </tr>
+ </tbody>
+</table>
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="./papers/icde24-gcmae.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Masked Graph Modeling with Multi-View Contrast</span> 
+      <br>Yanchen Luo, Sihang Li, Yongduo Sui, Junkang Wu, <b>Jiancan Wu</b>, Xiang Wang
+    <br>ICDE 2024 (Full) &nbsp;&nbsp; <a href="https://github.com/lyc0930/GCMAE" target="_blank">Codes</a> &nbsp;&nbsp;
+  </td> 
+  </tr>
+ </tbody>
+</table>
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="./papers/wsdm24-dsl.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Dynamic Sparse Learning: A Novel Paradigm for Efficient Recommendation</span> 
       <br>Shuyao Wang, Yongduo Sui, <b>Jiancan Wu</b>, Zhi Zheng, Hui Xiong
-    <br>WSDM 2024 (Accept Rate: 18%) &nbsp;&nbsp;
+    <br>WSDM 2024 (Full, Accept Rate: 18%) &nbsp;&nbsp; <a href="https://github.com/shuyao-wang/DSL" target="_blank">Codes</a> &nbsp;&nbsp;
   </td> 
   </tr>
  </tbody>
@@ -180,8 +209,8 @@ Multi-modal Data Analysis" </font> </br>
   <tr>
     <td class="left"><a href="./papers/tois-ssm.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">On the Effectiveness of Sampled Softmax Loss for Item Recommendation</span> 
-      <br><b>Jiancan Wu</b>, Xiang Wang, Xingyu Gao, Jiawei Chen, Hongcheng Fu, Tianyu Qiu, and Xiangnan He.
-    <br>ACM Transactions on Information Systems (TOIS 2023) &nbsp;&nbsp;
+      <br><b>Jiancan Wu</b>, Xiang Wang, Xingyu Gao, Jiawei Chen, Hongcheng Fu, and Tianyu Qiu
+    <br>ACM Transactions on Information Systems (TOIS 2023) &nbsp;&nbsp; <a href="https://github.com/wujcan/SSM-TensorFlow" target="_blank">Codes</a> &nbsp;&nbsp;
   </td> 
   </tr>
  </tbody>
@@ -190,10 +219,10 @@ Multi-modal Data Analysis" </font> </br>
 <table>
   <tbody>
   <tr>
-    <td class="left"><a href="https://neurips.cc/virtual/2023/poster/70466" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td class="left"><a href="./papers/neurips23-DreamRec.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Generate What You Prefer: Reshaping Sequential Recommendation via Guided Diffusion</span> 
-      <br>Zhengyi Yang, <b>Jiancan Wu</b>, Zhicai Wang, Xiang Wang, Yancheng Yuan & Xiangnan He
-    <br>NeurIPS 2023 (Accept Rate: 26.1%) &nbsp;&nbsp;
+      <br>Zhengyi Yang, <b>Jiancan Wu*</b>, Zhicai Wang, Xiang Wang, Yancheng Yuan & Xiangnan He
+    <br>NeurIPS 2023 (Poster, Accept Rate: 26.1%) &nbsp;&nbsp; <a href="https://github.com/YangZhengyi98/DreamRec" target="_blank">Codes</a> &nbsp;&nbsp; (*Corresponding)
   </td> 
   </tr>
  </tbody>
@@ -202,10 +231,10 @@ Multi-modal Data Analysis" </font> </br>
 <table>
   <tbody>
   <tr>
-    <td class="left"><a href="https://neurips.cc/virtual/2023/poster/72796" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td class="left"><a href="./papers/neurips23-adnce.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Understanding Contrastive Learning via Distributionally Robust Optimization</span> 
       <br>Junkang Wu, Jiawei Chen, <b>Jiancan Wu</b>, Wentao Shi, Xiang Wang & Xiangnan He
-    <br>NeurIPS 2023 (Accept Rate: 26.1%) &nbsp;&nbsp;
+    <br>NeurIPS 2023 (Poseter, Accept Rate: 26.1%) &nbsp;&nbsp; <a href="https://github.com/junkangwu/ADNCE" target="_blank">Codes</a> &nbsp;&nbsp; 
   </td> 
   </tr>
  </tbody>
@@ -214,10 +243,10 @@ Multi-modal Data Analysis" </font> </br>
 <table>
   <tbody>
   <tr>
-    <td class="left"><a href="https://neurips.cc/virtual/2023/poster/70792" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td class="left"><a href="./papers/neurips23-aia.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Unleashing the Power of Graph Data Augmentation on Covariate Shift</span> 
       <br>Yongduo Sui, Qitian Wu, <b>Jiancan Wu</b>, Qing Cui, Longfei Li, Jun Zhou, Xiang Wang & Xiangnan He
-    <br>NeurIPS 2023 (Accept Rate: 26.1%) &nbsp;&nbsp;
+    <br>NeurIPS 2023 (Poster, Accept Rate: 26.1%) &nbsp;&nbsp; <a href="https://github.com/yongduosui/AIA" target="_blank">Codes</a> &nbsp;&nbsp; 
   </td> 
   </tr>
  </tbody>
@@ -337,7 +366,7 @@ Multi-modal Data Analysis" </font> </br>
 </br>
 <!-- <div id="clustrmaps-widget"></div> <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=BMZwy5vgkXtV6P19neLzpJ23Mpj_2dIdhe9EE5_5V0I"></script> -->
 
-<p>Last update: Sep 23th, 2023. Webpage template borrows from <a href="http://staff.ustc.edu.cn/~hexn/">Xiangnan He</a>.</p>
+<p>Last update: March 27th, 2024. Webpage template borrows from <a href="http://staff.ustc.edu.cn/~hexn/">Xiangnan He</a>.</p>
 
 </div>
 </div>
