--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ Multi-modal Data Analysis" </font> </br>
   <tr>
     <td class="left"><a href="./papers/icde24-bsl.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">BSL: Understanding and Improving Softmax Loss for Recommendation</span> 
-      <br>Junkang Wu, Jiawei Chen, <b>Jiancan Wu*</b>, Wentao Shi, Jizhi Zhang, Xiang Wang
+      <br>Junkang Wu, Jiawei Chen, <b>Jiancan Wu*</b>, Wentao Shi, Jizhi Zhang, and Xiang Wang
     <br>ICDE 2024 (Full) &nbsp;&nbsp; <a href="https://github.com/junkangwu/BSL" target="_blank">Codes</a> &nbsp;&nbsp; (*Corresponding)
   </td> 
   </tr>
@@ -183,7 +183,7 @@ Multi-modal Data Analysis" </font> </br>
   <tr>
     <td class="left"><a href="./papers/icde24-gcmae.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Masked Graph Modeling with Multi-View Contrast</span> 
-      <br>Yanchen Luo, Sihang Li, Yongduo Sui, Junkang Wu, <b>Jiancan Wu</b>, Xiang Wang
+      <br>Yanchen Luo, Sihang Li, Yongduo Sui, Junkang Wu, <b>Jiancan Wu</b>, and Xiang Wang
     <br>ICDE 2024 (Full) &nbsp;&nbsp; <a href="https://github.com/lyc0930/GCMAE" target="_blank">Codes</a> &nbsp;&nbsp;
   </td> 
   </tr>
@@ -195,8 +195,32 @@ Multi-modal Data Analysis" </font> </br>
   <tr>
     <td class="left"><a href="./papers/wsdm24-dsl.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Dynamic Sparse Learning: A Novel Paradigm for Efficient Recommendation</span> 
-      <br>Shuyao Wang, Yongduo Sui, <b>Jiancan Wu</b>, Zhi Zheng, Hui Xiong
+      <br>Shuyao Wang, Yongduo Sui, <b>Jiancan Wu</b>, Zhi Zheng, and Hui Xiong
     <br>WSDM 2024 (Full, Accept Rate: 18%) &nbsp;&nbsp; <a href="https://github.com/shuyao-wang/DSL" target="_blank">Codes</a> &nbsp;&nbsp;
+  </td> 
+  </tr>
+ </tbody>
+</table>
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="./papers/tois-ssm.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">On the Effectiveness of Sampled Softmax Loss for Item Recommendation</span> 
+      <br><b>Jiancan Wu</b>, Xiang Wang, Xingyu Gao, Jiawei Chen, Hongcheng Fu, and Tianyu Qiu
+    <br>ACM Transactions on Information Systems (TOIS 2024) &nbsp;&nbsp; <a href="https://github.com/wujcan/SSM-TensorFlow" target="_blank">Codes</a> &nbsp;&nbsp;
+  </td> 
+  </tr>
+ </tbody>
+</table>
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="./papers/tkdd24-cal+.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Enhancing Out-of-distribution Generalization on Graphs via Causal Attention Learning</span> 
+      <br>Yongduo Sui, Wenyu Mao, Shuyao Wang, Xiang Wang, <b>Jiancan Wu</b>, Xiangnan He, and Tat-Seng Chua
+    <br>ACM Transactions on Knowledge Discovery from Data (TKDD 2024) &nbsp;&nbsp; <a href="https://github.com/shuyao-wang/CAL-plus" target="_blank">Codes</a> &nbsp;&nbsp;
   </td> 
   </tr>
  </tbody>
@@ -207,21 +231,9 @@ Multi-modal Data Analysis" </font> </br>
 <table>
   <tbody>
   <tr>
-    <td class="left"><a href="./papers/tois-ssm.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">On the Effectiveness of Sampled Softmax Loss for Item Recommendation</span> 
-      <br><b>Jiancan Wu</b>, Xiang Wang, Xingyu Gao, Jiawei Chen, Hongcheng Fu, and Tianyu Qiu
-    <br>ACM Transactions on Information Systems (TOIS 2023) &nbsp;&nbsp; <a href="https://github.com/wujcan/SSM-TensorFlow" target="_blank">Codes</a> &nbsp;&nbsp;
-  </td> 
-  </tr>
- </tbody>
-</table>
-
-<table>
-  <tbody>
-  <tr>
     <td class="left"><a href="./papers/neurips23-DreamRec.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Generate What You Prefer: Reshaping Sequential Recommendation via Guided Diffusion</span> 
-      <br>Zhengyi Yang, <b>Jiancan Wu*</b>, Zhicai Wang, Xiang Wang, Yancheng Yuan & Xiangnan He
+      <br>Zhengyi Yang, <b>Jiancan Wu*</b>, Zhicai Wang, Xiang Wang, Yancheng Yuan, and Xiangnan He
     <br>NeurIPS 2023 (Poster, Accept Rate: 26.1%) &nbsp;&nbsp; <a href="https://github.com/YangZhengyi98/DreamRec" target="_blank">Codes</a> &nbsp;&nbsp; (*Corresponding)
   </td> 
   </tr>
@@ -233,7 +245,7 @@ Multi-modal Data Analysis" </font> </br>
   <tr>
     <td class="left"><a href="./papers/neurips23-adnce.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Understanding Contrastive Learning via Distributionally Robust Optimization</span> 
-      <br>Junkang Wu, Jiawei Chen, <b>Jiancan Wu</b>, Wentao Shi, Xiang Wang & Xiangnan He
+      <br>Junkang Wu, Jiawei Chen, <b>Jiancan Wu</b>, Wentao Shi, Xiang Wang, and Xiangnan He
     <br>NeurIPS 2023 (Poseter, Accept Rate: 26.1%) &nbsp;&nbsp; <a href="https://github.com/junkangwu/ADNCE" target="_blank">Codes</a> &nbsp;&nbsp; 
   </td> 
   </tr>
@@ -245,7 +257,7 @@ Multi-modal Data Analysis" </font> </br>
   <tr>
     <td class="left"><a href="./papers/neurips23-aia.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Unleashing the Power of Graph Data Augmentation on Covariate Shift</span> 
-      <br>Yongduo Sui, Qitian Wu, <b>Jiancan Wu</b>, Qing Cui, Longfei Li, Jun Zhou, Xiang Wang & Xiangnan He
+      <br>Yongduo Sui, Qitian Wu, <b>Jiancan Wu</b>, Qing Cui, Longfei Li, Jun Zhou, Xiang Wang, and Xiangnan He
     <br>NeurIPS 2023 (Poster, Accept Rate: 26.1%) &nbsp;&nbsp; <a href="https://github.com/yongduosui/AIA" target="_blank">Codes</a> &nbsp;&nbsp; 
   </td> 
   </tr>
@@ -257,7 +269,7 @@ Multi-modal Data Analysis" </font> </br>
   <tr>
     <td class="left"><a href="./papers/sigir23-dros.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">A Generic Learning Framework for Sequential Recommendation with Distribution Shifts	</span> 
-      <br>Zhengyi Yang, Xiangnan He, Jizhi Zhang, <b>Jiancan Wu</b>, Xin Xin, Jiawei Chen & Xiang Wang		  
+      <br>Zhengyi Yang, Xiangnan He, Jizhi Zhang, <b>Jiancan Wu</b>, Xin Xin, Jiawei Chen, and Xiang Wang		  
     <br>SIGIR 2023 (Full, Accept Rate: 20.1%) &nbsp;&nbsp; <a href="https://github.com/YangZhengyi98/DROS" target="_blank">Codes</a> &nbsp;&nbsp;
   </td> 
   </tr>
@@ -269,7 +281,7 @@ Multi-modal Data Analysis" </font> </br>
   <tr>
     <td class="left"><a href="./papers/www23-gif.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">GIF: A General Graph Unlearning Strategy via Influence Function</span> 
-      <br><b>Jiancan Wu</b>, Yi Yang, Yuchun Qian, Yongduo Sui, Xiang Wang & Xiangnan He
+      <br><b>Jiancan Wu</b>, Yi Yang, Yuchun Qian, Yongduo Sui, Xiang Wang, and Xiangnan He
     <br>WWW 2023 (Full, Accept Rate: 19.2%) &nbsp;&nbsp; <a href="https://github.com/wujcan/GIF-torch" target="_blank">Codes</a>
   </td> 
   </tr>
@@ -281,7 +293,7 @@ Multi-modal Data Analysis" </font> </br>
   <tr>
     <td class="left"><a href="./papers/www23-adap-tau.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Adap-τ: Adpatively Modulating Embedding Magnitude for Recommendation</span> 
-      <br>Jiawei Chen, Junkang Wu, <b>Jiancan Wu</b>, Xuezhi Cao, Sheng Zhou & Xiangnan He
+      <br>Jiawei Chen, Junkang Wu, <b>Jiancan Wu</b>, Xuezhi Cao, Sheng Zhou, and Xiangnan He
     <br>WWW 2023 (Full, Accept Rate: 19.2%) &nbsp;&nbsp; <a href="https://github.com/junkangwu/Adap_tau" target="_blank">Codes</a>
   </td> 
   </tr>
@@ -295,7 +307,7 @@ Multi-modal Data Analysis" </font> </br>
   <tr>
     <td class="left"><a href="./papers/fcs22-gcm.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Graph Convolution Machine for Context-aware Recommender System</span> 
-      <br><b>Jiancan Wu</b>, Xiangnan He, Xiang Wang, Qifan Wang, Weijian Chen, Jianxun Lian & Xing Xie
+      <br><b>Jiancan Wu</b>, Xiangnan He, Xiang Wang, Qifan Wang, Weijian Chen, Jianxun Lian, and Xing Xie
     <br>Frontiers of Computer Science (FOCS 2022) &nbsp;&nbsp; <a href="https://github.com/wujcan/GCM" target="_blank">Codes</a>
   </td>
   </tr>
@@ -307,7 +319,7 @@ Multi-modal Data Analysis" </font> </br>
   <tr>
     <td class="left"><a href="./papers/www22-cpr.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Cross Pairwise Ranking for Unbiased Item Recommendation</span> 
-      <br>Qi Wan, Xiangnan He, Xiang Wang, <b>Jiancan Wu</b>, Wei Guo & Ruiming Tang
+      <br>Qi Wan, Xiangnan He, Xiang Wang, <b>Jiancan Wu</b>, Wei Guo, and Ruiming Tang
     <br>WWW 2022 (Full, Accept rate: 17.7%) &nbsp;&nbsp; <a href="https://github.com/Qcactus/CPR" target="_blank">Codes</a> &nbsp;&nbsp;
   </td>  
   </tr>
@@ -319,7 +331,7 @@ Multi-modal Data Analysis" </font> </br>
   <tr>
     <td class="left"><a href="./papers/kdd22-cal.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Causal Attention for Interpretable and Generalizable Graph Classification</span> 
-      <br>Yongduo Sui, Xiang Wang, <b>Jiancan Wu</b>, Min Lin, Xiangnan He, Tat-Seng Chua
+      <br>Yongduo Sui, Xiang Wang, <b>Jiancan Wu</b>, Min Lin, Xiangnan He, and Tat-Seng Chua
     <br>KDD 2022 (Full, Accept rate: 15.0%) &nbsp;&nbsp; <a href="" target="_blank">Codes</a> &nbsp;&nbsp;
   </td>  
   </tr>
