--- a/index.html
+++ b/index.html
@@ -169,6 +169,42 @@ Multi-modal Data Analysis" </font> </br>
 <table>
   <tbody>
   <tr>
+    <td class="left"><a href="./papers/tocome.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Let Me Do It For You: Towards LLM Empowered Recommendation via Tool Learning </span> 
+      <br>Yuyue Zhao, <b>Jiancan Wu</b>, Xiang Wang, Wei Tang, Dingxian Wang and Maarten de Rijke	  
+    <br>SIGIR 2024 (Full, Accept Rate: 20.1%) &nbsp;&nbsp; <a href="" target="_blank">Codes</a> &nbsp;&nbsp;
+  </td> 
+  </tr>
+ </tbody>
+</table>
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="./papers/tocome.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Large Language-Recommendation Assistant	</span> 
+      <br>Jiayi Liao, Sihang Li, Zhengyi Yang, <b>Jiancan Wu</b>, Yancheng Yuan, Xiang Wang, and Xiangnan He		  
+    <br>SIGIR 2024 (Full, Accept Rate: 20.1%) &nbsp;&nbsp; <a href="https://github.com/ljy0ustc/LLaRA" target="_blank">Codes</a> &nbsp;&nbsp;
+  </td> 
+  </tr>
+ </tbody>
+</table>
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="./papers/tocome.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Leave No Patient Behind: Enhancing Medication Recommendation for Rare Disease Patients</span> 
+      <br>Zihao Zhao, Yi Jing, Fuli Feng, <b>Jiancan Wu</b>, Chongming Gao & Xiangnan He		  
+    <br>SIGIR 2024 (Full, Accept Rate: 20.1%) &nbsp;&nbsp; <a href="" target="_blank">Codes</a> &nbsp;&nbsp;
+  </td> 
+  </tr>
+ </tbody>
+</table>
+
+<table>
+  <tbody>
+  <tr>
     <td class="left"><a href="./papers/icde24-bsl.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">BSL: Understanding and Improving Softmax Loss for Recommendation</span> 
       <br>Junkang Wu, Jiawei Chen, <b>Jiancan Wu*</b>, Wentao Shi, Jizhi Zhang, and Xiang Wang
@@ -300,6 +336,18 @@ Multi-modal Data Analysis" </font> </br>
  </tbody>
 </table>
 
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://link.springer.com/article/10.1007/s11704-023-2655-2" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">How graph convolutions amplify popularity bias for recommendation?</span> 
+      <br>Jiajia Chen, <b>Jiancan Wu</b>, Jiawei Chen, Xin Xin, Yong Li, Xiangnan He
+    <br>Frontiers of Computer Science (FCS 2023) &nbsp;&nbsp; <a href="https://github.com/MEICRS/DAP" target="_blank">Codes</a>
+  </td>
+  </tr>
+ </tbody>
+</table>
+
 
 <b> In the Year of 2022: </b> </br></br>
 <table>
@@ -308,7 +356,7 @@ Multi-modal Data Analysis" </font> </br>
     <td class="left"><a href="./papers/fcs22-gcm.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Graph Convolution Machine for Context-aware Recommender System</span> 
       <br><b>Jiancan Wu</b>, Xiangnan He, Xiang Wang, Qifan Wang, Weijian Chen, Jianxun Lian, and Xing Xie
-    <br>Frontiers of Computer Science (FOCS 2022) &nbsp;&nbsp; <a href="https://github.com/wujcan/GCM" target="_blank">Codes</a>
+    <br>Frontiers of Computer Science (FCS 2022) &nbsp;&nbsp; <a href="https://github.com/wujcan/GCM" target="_blank">Codes</a>
   </td>
   </tr>
  </tbody>
