--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ Multi-modal Data Analysis" </font> </br>
   <tr>
     <td class="left"><a href="./papers/tocome.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Let Me Do It For You: Towards LLM Empowered Recommendation via Tool Learning </span> 
-      <br>Yuyue Zhao, <b>Jiancan Wu</b>, Xiang Wang, Wei Tang, Dingxian Wang and Maarten de Rijke	  
+      <br>Yuyue Zhao, <b>Jiancan Wu</b>, Xiang Wang, Wei Tang, Dingxian Wang, and Maarten de Rijke	  
     <br>SIGIR 2024 (Full, Accept Rate: 20.1%) &nbsp;&nbsp; <a href="" target="_blank">Codes</a> &nbsp;&nbsp;
   </td> 
   </tr>
@@ -195,7 +195,7 @@ Multi-modal Data Analysis" </font> </br>
   <tr>
     <td class="left"><a href="./papers/tocome.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Leave No Patient Behind: Enhancing Medication Recommendation for Rare Disease Patients</span> 
-      <br>Zihao Zhao, Yi Jing, Fuli Feng, <b>Jiancan Wu</b>, Chongming Gao & Xiangnan He		  
+      <br>Zihao Zhao, Yi Jing, Fuli Feng, <b>Jiancan Wu</b>, Chongming Gao, and Xiangnan He		  
     <br>SIGIR 2024 (Full, Accept Rate: 20.1%) &nbsp;&nbsp; <a href="" target="_blank">Codes</a> &nbsp;&nbsp;
   </td> 
   </tr>
