--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
 <div id="news">
     <h2>News</h2><br>
     <font size="3px">
+
+    <b>26 Sep 2024</b><br>
+    <span class="easylink">
+    Two papers are accepted by <a href="https://sigir-2024.github.io/", target="_blank">NeurIPS 2024</a> on LLM-based recommendation and DPO. 
+    </span><br><br>
+
+    <b>26 Sep 2024</b><br>
+    <span class="easylink">
+    One papers is accepted by <a href="https://www.sciencedirect.com/journal/iscience/", target="_blank">iScience</a> on molecule generation. 
+    </span><br><br>
     
     <b>26 March 2024</b><br>
     <span class="easylink">
@@ -169,10 +179,10 @@ Multi-modal Data Analysis" </font> </br>
 <table>
   <tbody>
   <tr>
-    <td class="left"><a href="./papers/tocome.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">Let Me Do It For You: Towards LLM Empowered Recommendation via Tool Learning </span> 
-      <br>Yuyue Zhao, <b>Jiancan Wu</b>, Xiang Wang, Wei Tang, Dingxian Wang, and Maarten de Rijke	  
-    <br>SIGIR 2024 (Full, Accept Rate: 20.1%) &nbsp;&nbsp; <a href="" target="_blank">Codes</a> &nbsp;&nbsp;
+    <td class="left"><a href="https://arxiv.org/pdf/2407.08639" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">β-DPO: Direct Preference Optimization with Dynamic β </span> 
+      <br>Junkang Wu, Yuexiang Xie, Zhengyi Yang, <b>Jiancan Wu*</b>, Jinyang Gao, Bolin Ding, Xiang Wang, and Xiangnan He
+      <br>NeurIPS 2024 (Accept Rate: 25.8%) &nbsp;&nbsp; <a href="https://github.com/junkangwu/beta-DPO" target="_blank">Codes</a> &nbsp;&nbsp;(*Corresponding)
   </td> 
   </tr>
  </tbody>
@@ -181,7 +191,42 @@ Multi-modal Data Analysis" </font> </br>
 <table>
   <tbody>
   <tr>
-    <td class="left"><a href="./papers/tocome.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td class="left"><a href="https://arxiv.org/pdf/2408.10159" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Customizing Language Models with Instance-wise LoRA for Sequential Recommendation </span> 
+      <br>Xiaoyu Kong, <b>Jiancan Wu*</b>, An Zhang, Leheng Sheng, Hui Lin, Xiang Wang, and Xiangnan He
+      <br>NeurIPS 2024 (Accept Rate: 25.8%) &nbsp;&nbsp;(*Corresponding)
+  </td> 
+  </tr>
+ </tbody>
+</table>
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://www.sciencedirect.com/science/article/pii/S258900422402217X?utm_campaign=STMJ_219742_AUTH_SERV_PA&utm_medium=email&utm_acid=273982769&SIS_ID=&dgcid=STMJ_219742_AUTH_SERV_PA&CMX_ID=&utm_in=DM509933&utm_source=AC_" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Text-guided small molecule generation via diffusion model </span> 
+      <br>Yanchen Luo, Junfeng Fang, Sihang Li, Zhiyuan Liu, <b>Jiancan Wu</b>, An Zhang, Wenjie Du, Xiang Wang  
+    <br>iScience &nbsp;&nbsp;
+  </tr>
+ </tbody>
+</table>
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="./papers/sigir24-toolrec.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Let Me Do It For You: Towards LLM Empowered Recommendation via Tool Learning </span> 
+      <br>Yuyue Zhao, <b>Jiancan Wu*</b>, Xiang Wang, Wei Tang, Dingxian Wang, and Maarten de Rijke	  
+    <br>SIGIR 2024 (Full, Accept Rate: 20.1%) &nbsp;&nbsp; <a href="https://github.com/Go0day/ToolRec-Code" target="_blank">Codes</a> &nbsp;&nbsp;(*Corresponding)
+  </td> 
+  </tr>
+ </tbody>
+</table>
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="./papers/sigir24-llara.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Large Language-Recommendation Assistant	</span> 
       <br>Jiayi Liao, Sihang Li, Zhengyi Yang, <b>Jiancan Wu</b>, Yancheng Yuan, Xiang Wang, and Xiangnan He		  
     <br>SIGIR 2024 (Full, Accept Rate: 20.1%) &nbsp;&nbsp; <a href="https://github.com/ljy0ustc/LLaRA" target="_blank">Codes</a> &nbsp;&nbsp;
@@ -193,10 +238,10 @@ Multi-modal Data Analysis" </font> </br>
 <table>
   <tbody>
   <tr>
-    <td class="left"><a href="./papers/tocome.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td class="left"><a href="./papers/sigir24-RAREMed.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Leave No Patient Behind: Enhancing Medication Recommendation for Rare Disease Patients</span> 
       <br>Zihao Zhao, Yi Jing, Fuli Feng, <b>Jiancan Wu</b>, Chongming Gao, and Xiangnan He		  
-    <br>SIGIR 2024 (Full, Accept Rate: 20.1%) &nbsp;&nbsp; <a href="" target="_blank">Codes</a> &nbsp;&nbsp;
+    <br>SIGIR 2024 (Full, Accept Rate: 20.1%) &nbsp;&nbsp; <a href="https://github.com/zzhUSTC2016/RAREMed" target="_blank">Codes</a> &nbsp;&nbsp;
   </td> 
   </tr>
  </tbody>
@@ -426,7 +471,7 @@ Multi-modal Data Analysis" </font> </br>
 </br>
 <!-- <div id="clustrmaps-widget"></div> <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=BMZwy5vgkXtV6P19neLzpJ23Mpj_2dIdhe9EE5_5V0I"></script> -->
 
-<p>Last update: March 27th, 2024. Webpage template borrows from <a href="http://staff.ustc.edu.cn/~hexn/">Xiangnan He</a>.</p>
+<p>Last update: Nov 2nd, 2024. Webpage template borrows from <a href="http://staff.ustc.edu.cn/~hexn/">Xiangnan He</a>.</p>
 
 </div>
 </div>
