--- a/index.html
+++ b/index.html
@@ -33,14 +33,19 @@
 
     <b>26 Sep 2024</b><br>
     <span class="easylink">
-    Two papers are accepted by <a href="https://sigir-2024.github.io/", target="_blank">NeurIPS 2024</a> on LLM-based recommendation and DPO. 
+    Two papers are accepted by <a href="https://neurips.cc/Conferences/2024/", target="_blank">NeurIPS 2024</a> on LLM-based recommendation and DPO. 
     </span><br><br>
 
     <b>26 Sep 2024</b><br>
     <span class="easylink">
-    One papers is accepted by <a href="https://www.sciencedirect.com/journal/iscience/", target="_blank">iScience</a> on molecule generation. 
+    One paper is accepted by <a href="https://www.sciencedirect.com/journal/iscience/", target="_blank">iScience</a> on molecule generation. 
     </span><br><br>
     
+    <b>16 May 2024</b><br>
+    <span class="easylink">
+    One paper is accepted by <a href="https://2024.aclweb.org/", target="_blank">ACL 2024</a> on math reasoning using LLMs. 
+    </span><br><br>
+
     <b>26 March 2024</b><br>
     <span class="easylink">
     Three papers are accepted by <a href="https://sigir-2024.github.io/", target="_blank">SIGIR 2024</a> on LLM-based recommendation and medication recommendation. 
@@ -226,8 +231,20 @@ Multi-modal Data Analysis" </font> </br>
 <table>
   <tbody>
   <tr>
+    <td class="left"><a href="./papers/acl24-mugglemath.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">MuggleMath: Assessing the Impact of Query and Response Augmentation on Math Reasoning	</span> 
+      <br>Chengpeng Li, Zheng Yuan, Hongyi Yuan, Guanting Dong, Keming Lu, <b>Jiancan Wu</b>, Chuanqi Tan, Xiang Wang, Chang Zhou		  
+    <br>ACL 2024 (Full, Accept Rate: 21.3%) &nbsp;&nbsp;
+  </td> 
+  </tr>
+ </tbody>
+</table>
+
+<table>
+  <tbody>
+  <tr>
     <td class="left"><a href="./papers/sigir24-llara.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">Large Language-Recommendation Assistant	</span> 
+    <td><span class="title">LLaRA: Large Language-Recommendation Assistant	</span> 
       <br>Jiayi Liao, Sihang Li, Zhengyi Yang, <b>Jiancan Wu</b>, Yancheng Yuan, Xiang Wang, and Xiangnan He		  
     <br>SIGIR 2024 (Full, Accept Rate: 20.1%) &nbsp;&nbsp; <a href="https://github.com/ljy0ustc/LLaRA" target="_blank">Codes</a> &nbsp;&nbsp;
   </td> 
