--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ Multi-modal Data Analysis" </font> </br>
   <tr>
     <td class="left"><a href="https://www.sciencedirect.com/science/article/pii/S258900422402217X?utm_campaign=STMJ_219742_AUTH_SERV_PA&utm_medium=email&utm_acid=273982769&SIS_ID=&dgcid=STMJ_219742_AUTH_SERV_PA&CMX_ID=&utm_in=DM509933&utm_source=AC_" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Text-guided small molecule generation via diffusion model </span> 
-      <br>Yanchen Luo, Junfeng Fang, Sihang Li, Zhiyuan Liu, <b>Jiancan Wu</b>, An Zhang, Wenjie Du, Xiang Wang  
+      <br>Yanchen Luo, Junfeng Fang, Sihang Li, Zhiyuan Liu, <b>Jiancan Wu</b>, An Zhang, Wenjie Du, and Xiang Wang  
     <br>iScience &nbsp;&nbsp;
   </tr>
  </tbody>
@@ -233,7 +233,7 @@ Multi-modal Data Analysis" </font> </br>
   <tr>
     <td class="left"><a href="./papers/acl24-mugglemath.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">MuggleMath: Assessing the Impact of Query and Response Augmentation on Math Reasoning	</span> 
-      <br>Chengpeng Li, Zheng Yuan, Hongyi Yuan, Guanting Dong, Keming Lu, <b>Jiancan Wu</b>, Chuanqi Tan, Xiang Wang, Chang Zhou		  
+      <br>Chengpeng Li, Zheng Yuan, Hongyi Yuan, Guanting Dong, Keming Lu, <b>Jiancan Wu</b>, Chuanqi Tan, Xiang Wang, and Chang Zhou		  
     <br>ACL 2024 (Full, Accept Rate: 21.3%) &nbsp;&nbsp;
   </td> 
   </tr>
