--- a/index.html
+++ b/index.html
@@ -31,6 +31,21 @@
     <h2>News</h2><br>
     <font size="3px">
 
+    <b>23 Jan 2025</b><br>
+    <span class="easylink">
+    Two papers are accepted by <a href="https://iclr.cc/", target="_blank">ICLR 2025</a> on LLM alignment and unlearning. 
+    </span><br><br>
+
+    <b>23 Jan 2025</b><br>
+    <span class="easylink">
+    One paper is accepted by <a href="https://dl.acm.org/journal/tois", target="_blank">TOIS 2025</a> on prompt optimization. 
+    </span><br><br>
+
+    <b>15 Jan 2025</b><br>
+    <span class="easylink">
+    One paper is accepted by <a href="https://link.springer.com/journal/11704", target="_blank">FCS 2025</a> on graph OOD. 
+    </span><br><br>
+
     <b>26 Sep 2024</b><br>
     <span class="easylink">
     Two papers are accepted by <a href="https://neurips.cc/Conferences/2024/", target="_blank">NeurIPS 2024</a> on LLM-based recommendation and DPO. 
@@ -178,6 +193,51 @@ Multi-modal Data Analysis" </font> </br>
 <div id="papers">
 <h2 style="CLEAR: both">Selected Publications </h2> 
 </br>
+
+
+<b> In the Year of 2024: </b> </br></br>
+
+<table><tbody><tr><td class="left">
+  <a href="" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+      <td><span class="title">	
+  Unified Parameter-Efficient Unlearning for LLMs </span> <br>
+  Chenlu Ding, <b>Jiancan Wu</b>*, Yancheng Yuan, Jinda Lu, Kai Zhang, Alex Su, Xiang Wang, and Xiangnan He
+  <br>ICLR (Accept Rate: 32.08%) &nbsp;&nbsp; 
+  (*Corresponding)
+    </td> </tr> </tbody> </table>
+  
+  <table><tbody><tr><td class="left">
+  <a href="" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+      <td><span class="title">	
+  Towards Robust Alignment of Language Models: Distributionally Robustifying Direct Preference Optimization </span> <br>
+  Junkang Wu, Yuexiang Xie, Zhengyi Yang, <b>Jiancan Wu</b>*, Jiawei Chen, Jinyang Gao, Bolin Ding, Xiang Wang, and Xiangnan He
+  <br>ICLR (Accept Rate: 32.08%) &nbsp;&nbsp; 
+  (*Corresponding)
+    </td> </tr> </tbody> </table>
+
+  <table><tbody><tr><td class="left">
+    <a href="" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+        <td><span class="title">	
+    Reinforced Prompt Personalization for Recommendation with Large Language Models </span> <br>
+    Wenyu Mao, <b>Jiancan Wu</b>*, Weijian Chen, Chongming Gao, Xiang Wang, and Xiangnan He
+    <br>ACM Transactions on Information Systems (TOIS 2025)  &nbsp;&nbsp; 
+    (*Corresponding)
+      </td> </tr> </tbody> </table>
+
+  <table>
+    <tbody>
+    <tr>
+      <td class="left"><a href="" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+      <td><span class="title">Invariant Graph Learning Meets Information Bottleneck for Out-of-Distribution Generalization</span> 
+        <br>Wenyu Mao, <b>Jiancan Wu</b>*, and Xiang Wang
+      <br>Frontiers of Computer Science (FCS 2025) &nbsp;&nbsp;
+      (*Corresponding)
+    </td>
+    </tr>
+    </tbody>
+  </table>
+
+    
 
 <b> In the Year of 2024: </b> </br></br>
 
@@ -488,7 +548,7 @@ Multi-modal Data Analysis" </font> </br>
 </br>
 <!-- <div id="clustrmaps-widget"></div> <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=BMZwy5vgkXtV6P19neLzpJ23Mpj_2dIdhe9EE5_5V0I"></script> -->
 
-<p>Last update: Nov 2nd, 2024. Webpage template borrows from <a href="http://staff.ustc.edu.cn/~hexn/">Xiangnan He</a>.</p>
+<p>Last update: Jan 31st, 2025. Webpage template borrows from <a href="http://staff.ustc.edu.cn/~hexn/">Xiangnan He</a>.</p>
 
 </div>
 </div>
