--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ Multi-modal Data Analysis" </font> </br>
     <tr>
       <td class="left"><a href="" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
       <td><span class="title">Invariant Graph Learning Meets Information Bottleneck for Out-of-Distribution Generalization</span> 
-        <br>Wenyu Mao, <b>Jiancan Wu</b>*, and Xiang Wang
+        <br>Wenyu Mao, <b>Jiancan Wu</b>*, Haoyang Liu, Yongduo Sui, and Xiang Wang
       <br>Frontiers of Computer Science (FCS 2025) &nbsp;&nbsp;
       (*Corresponding)
     </td>
