--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta content="IE=7.0000" http-equiv="X-UA-Compatible">
 <title>Jiancan Wu's Homepage</title>
-<meta name="description" content="Jiancan Wu, Postdoc in University of Science and Technology of China. Recommender systems, information retrieval, graph learning, contrastive learning, causal inference.">
-<meta name="keywords" content="Jiancan Wu, USTC, University of Science and Technology of China, recommender systems, personalized recommendation, information retrieval, deep learning, machine learning, graph learning, self-supervised learning">
+<meta name="description" content="Jiancan Wu, Associate Research Professor in University of Science and Technology of China. LLMs, Recommender systems, information retrieval, graph learning, contrastive learning, causal inference.">
+<meta name="keywords" content="Jiancan Wu, USTC, University of Science and Technology of China, LLMs, recommender systems, personalized recommendation, information retrieval, deep learning, machine learning, graph learning, self-supervised learning">
 
 <link rel="stylesheet" type="text/css" href="./files/JiancanWu.css">
 <!-- <script type="text/javascript" async="" src="./files/ga.js"></script><script type="text/javascript">
@@ -146,8 +146,8 @@ Email: wujcan AT gmail.com</a><br>
 </tbody></table>
 
 <div style="margin-top:20px;">
-    Jiancan Wu is now a postdoc in <a href="http://data-science.ustc.edu.cn/">LDS</a>, Department of Electronic Engineering and Information Science(6系), University of Science and Technology of China.
-    His research interests include information retrieval, data mining, self-supervised learning, particularly in recommender systems, graph learning.
+    Jiancan Wu is now an associate research professor in Department of Electronic Engineering and Information Science (6系), University of Science and Technology of China.
+    His research interests include information retrieval, data mining, large language models, particularly in recommender systems, alignment, and unlearning.
     
 </div>
 
@@ -528,7 +528,12 @@ Multi-modal Data Analysis" </font> </br>
 <h2 style="CLEAR: both">Experiences</h2>
 <table>
   <tbody><tr>
-    <td> <span class="title">Postdoc Research Fellow</span>, University of Science and Technology of China, June 2022 - Present <br>
+    <td> <span class="title"> Associate Research Professor</span>, University of Science and Technology of China, Nov 2024 - Now <br>
+    </td></tr></tbody>
+</table>
+<table>
+  <tbody><tr>
+    <td> <span class="title">Postdoc Research Fellow</span>, University of Science and Technology of China, June 2022 - Oct 2024 <br>
       Advisor: <a href="http://staff.ustc.edu.cn/~hexn/" target="_blank">Prof. Xiangnan He</a> (<a href="http://data-science.ustc.edu.cn/main.htm">LDS: Lab for Data Science</a>)
     </td></tr></tbody>
 </table>
