--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 443 Huangshan Road, Hefei, China 230027<br>
 </p><p style="margin-left:0px;">
 Email: wujcan AT gmail.com</a><br>
-&bull; <a href="https://github.com/wujcan">GitHub</a> <br>
+&bull; <a href="https://scholar.google.com/citations?user=z9zW1UgAAAAJ">Google Scholar</a> &bull; <a href="https://github.com/wujcan">GitHub</a>  <br>
 </p></font><p><font size="+0">
 </font>
 </p></td>
