--- a/index.html
+++ b/index.html
@@ -138,7 +138,9 @@
 443 Huangshan Road, Hefei, China 230027<br>
 </p><p style="margin-left:0px;">
 Email: wujcan AT gmail.com</a><br>
-&bull; <a href="https://scholar.google.com/citations?user=z9zW1UgAAAAJ">Google Scholar</a> &bull; <a href="https://github.com/wujcan">GitHub</a>  <br>
+&bull; <a href="https://scholar.google.com/citations?user=z9zW1UgAAAAJ"><img src="https://img.shields.io/endpoint?logo=Google%20Scholar&amp;url=https%3A%2F%2Fcdn.jsdelivr.net%2Fgh%2FPeiJieSun%2Fpeijiesun.github.io@google-scholar-stats%2Fgs_data_shieldsio.json&amp;labelColor=f6f6f6&amp;color=9cf&amp;style=flat&amp;label=Google Scholar Citations" /></a>
+&bull; <a href="https://github.com/wujcan">GitHub</a>  <br>
+![Google Scholar Stats](./google-scholar-stats.svg)  
 </p></font><p><font size="+0">
 </font>
 </p></td>
