--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@ Multi-modal Data Analysis" </font> </br>
 </br>
 <!-- <div id="clustrmaps-widget"></div> <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=BMZwy5vgkXtV6P19neLzpJ23Mpj_2dIdhe9EE5_5V0I"></script> -->
 
-<p>Last update: Jan 31st, 2025. Webpage template borrows from <a href="http://staff.ustc.edu.cn/~hexn/">Xiangnan He</a>.</p>
+<p>Last update: Feb 4th, 2025. Webpage template borrows from <a href="http://staff.ustc.edu.cn/~hexn/">Xiangnan He</a>.</p>
 
 </div>
 </div>
