--- a/index.html
+++ b/index.html
@@ -138,7 +138,10 @@
 443 Huangshan Road, Hefei, China 230027<br>
 </p><p style="margin-left:0px;">
 Email: wujcan AT gmail.com</a><br>
+<!-- 
 &bull; <a href="https://scholar.google.com/citations?user=z9zW1UgAAAAJ"><img src="https://img.shields.io/endpoint?logo=Google%20Scholar&amp;url=https%3A%2F%2Fraw.githubusercontent.com%2Fwujcan%2Fwujcan.github.io%2Fgoogle-scholar-stats%2Fgs_data_shieldsio.json&amp;labelColor=f6f6f6&amp;color=9cf&amp;style=flat&amp;label=Google Scholar Citations" /></a> &nbsp;&nbsp;&nbsp;&nbsp;
+-->
+&bull; <a href="https://scholar.google.com/citations?user=z9zW1UgAAAAJ"><img src="https://badgen.net/https/raw.githubusercontent.com/wujcan/wujcan.github.io/google-scholar-stats/gs_data_shieldsio.json?icon=googlescholar&label=Google%20Scholar%20Citations" /></a> &nbsp;&nbsp;&nbsp;&nbsp;  
 &bull; <a href="https://github.com/wujcan">GitHub</a>  <br>
 </p></font><p><font size="+0">
 </font>
