--- a/index.html
+++ b/index.html
@@ -31,6 +31,46 @@
     <h2>News</h2><br>
     <font size="3px">
 
+    <b>18 Sep 2025</b><br>
+    <span class="easylink">
+    Four papers are accepted by <a href="https://neurips.cc/", target="_blank">NeurIPS 2025</a> on LLM alignment, diffusion recommendation, Agentic RL for Recommendation. 
+    </span><br><br>
+
+    <b>21 Aug 2025</b><br>
+    <span class="easylink">
+    One paper is accepted by <a href="https://2025.emnlp.org/", target="_blank">EMNLP 2025</a> on Auction Agent. 
+    </span><br><br>
+
+    <b>9 Jul 2025</b><br>
+    <span class="easylink">
+    One paper is accepted by <a href="https://dl.acm.org/journal/tois", target="_blank">TOIS 2025</a> on graph Transformer. 
+    </span><br><br>
+
+    <b>4 Jul 2025</b><br>
+    <span class="easylink">
+    One tutorial proposal is accepted by <a href="https://cikm2025.org/", target="_blank">CIKM 2025</a> on Tokenization for Recommendation. 
+    </span><br><br>
+
+    <b>3 Jul 2025</b><br>
+    <span class="easylink">
+    One paper is accepted by <a href="https://recsys.acm.org/recsys25/", target="_blank">RecSys 2025</a> on News recommendation. 
+    </span><br><br>
+
+    <b>16 May 2025</b><br>
+    <span class="easylink">
+    Two papers are accepted by <a href="https://2025.aclweb.org/", target="_blank">ACL 2025</a> on travel planning and DPO. 
+    </span><br><br>
+
+    <b>1 May 2025</b><br>
+    <span class="easylink">
+    Two papers are accepted by <a href="https://icml.cc/", target="_blank">ICML 2025</a> on LLM Alignment. 
+    </span><br><br>
+
+    <b>5 Apr 2025</b><br>
+    <span class="easylink">
+    One paper is accepted by <a href="https://sigir2025.dei.unipd.it/", target="_blank">SIGIR 2025</a> on diffusion-based recommendation. 
+    </span><br><br>
+
     <b>23 Jan 2025</b><br>
     <span class="easylink">
     Two papers are accepted by <a href="https://iclr.cc/", target="_blank">ICLR 2025</a> on LLM alignment and unlearning. 
@@ -201,23 +241,123 @@ Multi-modal Data Analysis" </font> </br>
 <table><tbody><tr><td class="left">
   <a href="" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
       <td><span class="title">	
-  Unified Parameter-Efficient Unlearning for LLMs </span> <br>
-  Chenlu Ding, <b>Jiancan Wu</b>*, Yancheng Yuan, Jinda Lu, Kai Zhang, Alex Su, Xiang Wang, and Xiangnan He
-  <br>ICLR (Accept Rate: 32.08%) &nbsp;&nbsp; 
-  (*Corresponding)
-    </td> </tr> </tbody> </table>
-  
-  <table><tbody><tr><td class="left">
+  Think before Recommendation: Autonomous Reasoning-enhanced Recommender </span> <br>
+  Xiaoyu Kong, Junguang Jiang, Bin Liu, Ziru Xu, Han Zhu, Jian Xu, Bo Zheng, <b>Jiancan Wu</b>, Xiang Wang
+  <br>NeurIPS 2025 (Accept Rate: 24.52%) &nbsp;&nbsp; 
+    </td> </tr> </tbody> </table>  
+
+<table><tbody><tr><td class="left">
   <a href="" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
       <td><span class="title">	
-  Towards Robust Alignment of Language Models: Distributionally Robustifying Direct Preference Optimization </span> <br>
-  Junkang Wu, Yuexiang Xie, Zhengyi Yang, <b>Jiancan Wu</b>*, Jiawei Chen, Jinyang Gao, Bolin Ding, Xiang Wang, and Xiangnan He
-  <br>ICLR (Accept Rate: 32.08%) &nbsp;&nbsp; 
+  On Efficiency-Effectiveness Trade-off of Diffusion-based Recommenders </span> <br>
+  Wenyu Mao, <b>Jiancan Wu</b>, Guoqing Hu, Zhengyi Yang, Wei Ji, Xiang Wang
+  <br>NeurIPS 2025 (Accept Rate: 24.52%) &nbsp;&nbsp; 
+    </td> </tr> </tbody> </table>  
+
+<table><tbody><tr><td class="left">
+  <a href="" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+      <td><span class="title">	
+  RePO: Understanding Preference Learning Through ReLU-Based Optimization </span> <br>
+  Junkang Wu, Kexin Huang, Xue Wang, Jinyang Gao, Bolin Ding, <b>Jiancan Wu</b>, Xiangnan He, Xiang Wang
+  <br>NeurIPS 2025 (Accept Rate: 24.52%) &nbsp;&nbsp; 
+    </td> </tr> </tbody> </table>  
+
+<table><tbody><tr><td class="left">
+  <a href="" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+      <td><span class="title">	
+  Fading to Grow: Growing Preference Ratios via Preference Fading Discrete Diffusion for Recommendation </span> <br>
+  Guoqing Hu, An Zhang, Shuchang Liu, Wenyu Mao, <b>Jiancan Wu</b>, Xun Yang, Xiang Li, Lantao Hu, Han Li, Kun Gai, Xiang Wang
+  <br>NeurIPS 2025 (Accept Rate: 24.52%) &nbsp;&nbsp; 
+    </td> </tr> </tbody> </table>  
+
+<table><tbody><tr><td class="left">
+  <a href="" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+      <td><span class="title">	
+  LaMP-Val: Large Language Models Empower Personalized Valuation in Auction </span> <br>
+  Jie Sun, Tianyu Zhang, Houcheng Jiang, Kexin Huang, Xiang Shu, Zhibo Zhu, Lintao Ma, Xingyu Lu, Jun Zhou, Junkang Wu, Chi Luo, An Zhang, <b>Jiancan Wu</b>*, Xiang Wang
+  <br>EMNLP 2025 (Findings) &nbsp;&nbsp; 
+  (*Corresponding)
+    </td> </tr> </tbody> </table>  
+
+<table><tbody><tr><td class="left">
+  <a href="./papers/RecSys25-LANCE.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+      <td><span class="title">	
+  LANCE: Exploration and Reflection for LLM-based Textual Attacks on News Recommender Systems </span> <br>
+  Yuyue Zhao, Jin Huang, Shuchang Liu, <b>Jiancan Wu</b>, Xiang Wang, Maarten de Rijke
+  <br>RecSys 2025 &nbsp;&nbsp; 
+    </td> </tr> </tbody> </table>  
+
+<table><tbody><tr><td class="left">
+  <a href="./papers/ACL25-PTS.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+      <td><span class="title">	
+  Personal Travel Solver: A Preference-Driven LLM-Solver System for Travel Planning </span> <br>
+  Zijian Shao, <b>Jiancan Wu</b>*, Weijian Chen, Xiang Wang
+  <br>ACL 2025 &nbsp;&nbsp; 
   (*Corresponding)
     </td> </tr> </tbody> </table>
 
   <table><tbody><tr><td class="left">
-    <a href="" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+  <a href="./papers/ACL25-gammaPO.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+      <td><span class="title">	
+  Robust Preference Optimization via Dynamic Target Margins </span> <br>
+  Jie Sun, Junkang Wu, <b>Jiancan Wu</b>, Zhibo Zhu, Xingyu Lu, Jun Zhou, Lintao Ma, Xiang Wang
+  <br>ACL 2025 (Findings) &nbsp;&nbsp; 
+    </td> </tr> </tbody> </table>
+
+  <table><tbody><tr><td class="left">
+  <a href="./papers/ICML25-AlphaDPO.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+      <td><span class="title">	
+  AlphaDPO: Adaptive Reward Margin for Direct Preference Optimization </span> <br>
+  Junkang Wu, Xue Wang, Zhengyi Yang, <b>Jiancan Wu</b>, Jinyang Gao, Bolin Ding, Xiang Wang, Xiangnan He
+  <br>ICML 2025 (Accept Rate: 26.9%) &nbsp;&nbsp; 
+    </td> </tr> </tbody> </table>
+
+  <table><tbody><tr><td class="left">
+  <a href="./papers/ICML25-MAP.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+      <td><span class="title">	
+  Larger or Smaller Reward Margins to Select Preferences for LLM Alignment? </span> <br>
+  Kexin Huang, Junkang Wu, Ziqian Chen, Xue Wang, Jinyang Gao, Bolin Ding, <b>Jiancan Wu</b>, Xiangnan He, Xiang Wang
+  <br>ICML 2025 (Accept Rate: 26.9%) &nbsp;&nbsp; 
+    </td> </tr> </tbody> </table>
+
+  <table><tbody><tr><td class="left">
+  <a href="./papers/SIGIR25-TDM.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+      <td><span class="title">	
+  Addressing Missing Data Issue for Diffusion-based Recommendation </span> <br>
+  Wenyu Mao, Zhengyi Yang, <b>Jiancan Wu</b>*, Haozhe Liu, Yancheng Yuan, Xiang Wang, Xiangnan He
+  <br>SIGIR 2025 (Accept Rate: 21.5%) &nbsp;&nbsp; 
+  (*Corresponding)
+    </td> </tr> </tbody> </table>
+
+  <table><tbody><tr><td class="left">
+  <a href="./papers/ICLR25-LLMEraser.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+      <td><span class="title">	
+  Unified Parameter-Efficient Unlearning for LLMs </span> <br>
+  Chenlu Ding, <b>Jiancan Wu</b>*, Yancheng Yuan, Jinda Lu, Kai Zhang, Alex Su, Xiang Wang, and Xiangnan He
+  <br>ICLR 2025 (Accept Rate: 32.08%) &nbsp;&nbsp; 
+  (*Corresponding)
+    </td> </tr> </tbody> </table>
+  
+  <table><tbody><tr><td class="left">
+  <a href="./papers/ICLR25-DrDPO.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+      <td><span class="title">	
+  Towards Robust Alignment of Language Models: Distributionally Robustifying Direct Preference Optimization </span> <br>
+  Junkang Wu, Yuexiang Xie, Zhengyi Yang, <b>Jiancan Wu</b>*, Jiawei Chen, Jinyang Gao, Bolin Ding, Xiang Wang, and Xiangnan He
+  <br>ICLR 2025 (Accept Rate: 32.08%) &nbsp;&nbsp; 
+  (*Corresponding)
+    </td> </tr> </tbody> </table>
+
+  <table><tbody><tr><td class="left">
+    <a href="./papers/TOIS25-PGTR.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+        <td><span class="title">	
+    Position-aware Graph Transformer for Recommendation </span> <br>
+    Jiajia Chen, <b>Jiancan Wu</b>*, Jiawei Chen, Chongming Gao, Yong Li, Xiang Wang
+    <br>ACM Transactions on Information Systems (TOIS 2025)  &nbsp;&nbsp; 
+    (*Corresponding)
+      </td> </tr> </tbody> </table>
+
+  <table><tbody><tr><td class="left">
+    <a href="./papers/TOIS25-RPP.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
         <td><span class="title">	
     Reinforced Prompt Personalization for Recommendation with Large Language Models </span> <br>
     Wenyu Mao, <b>Jiancan Wu</b>*, Weijian Chen, Chongming Gao, Xiang Wang, and Xiangnan He
@@ -228,7 +368,7 @@ Multi-modal Data Analysis" </font> </br>
   <table>
     <tbody>
     <tr>
-      <td class="left"><a href="" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+      <td class="left"><a href="./papers/FCS25-InfoIGL.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
       <td><span class="title">Invariant Graph Learning Meets Information Bottleneck for Out-of-Distribution Generalization</span> 
         <br>Wenyu Mao, <b>Jiancan Wu</b>*, Haoyang Liu, Yongduo Sui, and Xiang Wang
       <br>Frontiers of Computer Science (FCS 2025) &nbsp;&nbsp;
@@ -245,7 +385,7 @@ Multi-modal Data Analysis" </font> </br>
 <table>
   <tbody>
   <tr>
-    <td class="left"><a href="https://arxiv.org/pdf/2407.08639" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td class="left"><a href="./papers/NIPS24-beta-DPO.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">β-DPO: Direct Preference Optimization with Dynamic β </span> 
       <br>Junkang Wu, Yuexiang Xie, Zhengyi Yang, <b>Jiancan Wu*</b>, Jinyang Gao, Bolin Ding, Xiang Wang, and Xiangnan He
       <br>NeurIPS 2024 (Accept Rate: 25.8%) &nbsp;&nbsp; <a href="https://github.com/junkangwu/beta-DPO" target="_blank">Codes</a> &nbsp;&nbsp;(*Corresponding)
@@ -257,7 +397,7 @@ Multi-modal Data Analysis" </font> </br>
 <table>
   <tbody>
   <tr>
-    <td class="left"><a href="https://arxiv.org/pdf/2408.10159" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td class="left"><a href="./papers/NIPS24-iLoRA.pdf" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Customizing Language Models with Instance-wise LoRA for Sequential Recommendation </span> 
       <br>Xiaoyu Kong, <b>Jiancan Wu*</b>, An Zhang, Leheng Sheng, Hui Lin, Xiang Wang, and Xiangnan He
       <br>NeurIPS 2024 (Accept Rate: 25.8%) &nbsp;&nbsp;(*Corresponding)
@@ -554,7 +694,7 @@ Multi-modal Data Analysis" </font> </br>
 </br>
 <!-- <div id="clustrmaps-widget"></div> <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=BMZwy5vgkXtV6P19neLzpJ23Mpj_2dIdhe9EE5_5V0I"></script> -->
 
-<p>Last update: Feb 4th, 2025. Webpage template borrows from <a href="http://staff.ustc.edu.cn/~hexn/">Xiangnan He</a>.</p>
+<p>Last update: Spe 19th, 2025. Webpage template borrows from <a href="http://staff.ustc.edu.cn/~hexn/">Xiangnan He</a>.</p>
 
 </div>
 </div>
